--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "nuxt": "3.15.1",
+    "nuxt-quasar-ui": "2.1.9",
+    "quasar": "2.17.6",
+    "sass-embedded": "^1.83.4",
     "vue": "latest",
     "vue-router": "latest"
   },
