--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@pinia/nuxt": "0.9.0",
     "nuxt": "3.15.1",
-    "nuxt-icons": "^3.2.1",
+    "nuxt-icons": "3.2.1",
     "nuxt-quasar-ui": "2.1.9",
+    "pinia": "2.3.1",
     "quasar": "2.17.6",
     "sass-embedded": "^1.83.4",
     "vue": "latest",
