--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@pinia/nuxt": "0.9.0",
     "nuxt": "3.15.1",
+    "nuxt-aos": "1.2.5",
     "nuxt-icons": "3.2.1",
     "nuxt-quasar-ui": "2.1.9",
     "pinia": "2.3.1",
