--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "0.9.0",
+    "dayjs": "1.11.13",
     "nuxt": "3.15.1",
     "nuxt-aos": "1.2.5",
     "nuxt-icons": "3.2.1",
