--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "pinia": "2.3.1",
     "quasar": "2.17.6",
     "sass-embedded": "^1.83.4",
+    "vee-validate": "4.15.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "yup": "1.6.1"
   },
   "devDependencies": {
     "@nuxt/eslint": "0.7.5",
